--- a/src/SCSS/HomeScss/BikeSlider.scss
+++ b/src/SCSS/HomeScss/BikeSlider.scss
@@ -31,13 +31,13 @@ r {
     background-position: center;
   }
   .firstImage {
-    background-image: url(../../Img/Slide3/cruuiser.png);
+    background-image: url(../../Img/HomeImg/companyBikeParking.png);
   }
   .secondImage {
-    background-image: url(../../Img/Slide3/scoter.png);
+    background-image: url(../../Img/HomeImg/scoter.png);
   }
   .thirdImage {
-    background-image: url(../../Img/Slide3/standard.png);
+    background-image: url(../../Img/HomeImg/standard.png);
   }
 }
 
