--- a/src/SCSS/HomeScss/Header.scss
+++ b/src/SCSS/HomeScss/Header.scss
@@ -13,16 +13,16 @@
 
 .slide1 {
     border-bottom-right-radius: 10vh;
-  background-image: url(../../Img/Slide3/slideImage1.jpg);
+  background-image: url(../../Img/HomeImg/slideImage1.jpg);
 }
 
 .slide2 {
     border-bottom-right-radius: 10vh;
-    background-image: url(../../Img/Slide3/slideImage2.jpg);
+    background-image: url(../../Img/HomeImg/slideImage2.jpg);
 }
 
 .slide3 {
-  background-image: url(../../Img/Slide3/slideImage3.jpg);
+  background-image: url(../../Img/HomeImg/slideImage3.jpg);
   border-bottom-right-radius: 10vh;
 }
 
