--- a/src/SCSS/HomeScss/WhyChoose.scss
+++ b/src/SCSS/HomeScss/WhyChoose.scss
@@ -38,7 +38,7 @@
       background-repeat: no-repeat;
       background-size: contain;
       background-origin: center;
-      background-image: url(../../Img/Slide3/companyBikeParking.png);
+      background-image: url(../../Img/HomeImg/companyBikeParking.png);
     }
 
     .whyChooseImageText{
@@ -70,13 +70,13 @@
       }
 
       .halmentImg {
-        background-image: url(../../Img/Slide3/helmet.png);
+        background-image: url(../../Img/HomeImg/helmet.png);
       }
       .priceImg {
-        background-image: url(../../Img/Slide3/zero.png);
+        background-image: url(../../Img/HomeImg/zero.png);
       }
       .OfferImg {
-        background-image: url(../../Img/Slide3/offer.png);
+        background-image: url(../../Img/HomeImg/offer.png);
       }
     }
   }
