--- a/src/SCSS/Navbar.scss
+++ b/src/SCSS/Navbar.scss
@@ -1,6 +1,105 @@
 
 
+.navbarContainer {
+  width: 100%;
+  height: 15%;
+  left: 0px;
+  top: 0px;
+  
+  background: #f43d4b;
+}
 
-.rule{
-    color: red;
+.inner_nav{
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+
+}
+
+.icon {
+  background-size: contain;
+  width: 15%;
+  height: 80%;
+  left: 10%;
+  top: 5%;
+  z-index: 12;
+  margin-left: 3rem;
+  background-repeat: no-repeat;
+  background-image: url(../Img/boongg-white-logo.jpg);
+}
+
+.loginBtn{
+  font-size: 1.2rem;
+  margin-right: 5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 15%;
+  /* border: 2px solid; */
+  color: #ffffff;
+}
+.loginBtn:hover{
+  background-color: #3d352cb7;
+}
+
+
+@media only screen and (min-width: 240px) {
+  .icon {
+    margin-top: 1rem;
+    margin-left: 1rem;
+    background-image: url(../Img/mobileLogo.png);
+  }
+  
+  .loginBtn{   
+    margin-right: 1rem;
+  }
+
+ 
+}
+
+@media only screen and (min-width: 700px) {
+  .icon {
+    margin-left: 1rem;
+    background-image: url(../Img/mobileLogo.png);
+  }
+  
+  .loginBtn{   
+    margin-right: 1rem;
+  }
+ 
+}
+
+@media only screen and (min-width: 740px) {
+  .icon {
+    margin-top: 1rem;
+    margin-left: 2rem;
+    background-image: url(../Img/boongg-white-logo.jpg);
+  }
+  
+  .loginBtn{   
+    margin-right: 2rem;
+  }
+}
+
+@media only screen and (min-width: 940px) {
+  .icon {
+    margin-top: 0.5rem;
+  }
+  
+}
+
+@media only screen and (min-width: 1440px) {
+  .icon {
+    margin-left: 5rem;
+    background-image: url(../Img/boongg-white-logo.jpg);
+  }
+  
+  .loginBtn{   
+    margin-right: 5rem;
+  }
 }
