--- a/src/SCSS/HomeScss/BikeSlider.scss
+++ b/src/SCSS/HomeScss/BikeSlider.scss
@@ -31,7 +31,7 @@ r {
     background-position: center;
   }
   .firstImage {
-    background-image: url(../../Img/HomeImg/companyBikeParking.png);
+    background-image: url(../../Img/HomeImg/cruuiser.png);
   }
   .secondImage {
     background-image: url(../../Img/HomeImg/scoter.png);
