--- a/src/SCSS/HomeScss/FeedBacks.scss
+++ b/src/SCSS/HomeScss/FeedBacks.scss
@@ -29,7 +29,8 @@
 }
 
 .feedName{
+  text-shadow: 0px 0px 10px 2px white;
   font-size: 26px;
-  text-shadow: 0px 0px 10px 2px  black;
   font-weight: bolder;
+  color: red;
 }
