--- a/src/SCSS/HomeScss/GrowBusiness.scss
+++ b/src/SCSS/HomeScss/GrowBusiness.scss
@@ -1,12 +1,13 @@
 .GrowBusinessContainer {
   position: relative;
   width: 100%;
-margin-top: 2rem;
-margin-bottom: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  box-shadow: 0px 0px 6px 0px black;
 }
 
-.img{
-    opacity: 0.4;
+.img {
+  opacity: 0.4;
 }
 .content {
   display: flex;
@@ -14,33 +15,111 @@ margin-bottom: 2rem;
   align-items: center;
   justify-content: space-between;
   position: absolute;
-  top: 40%;
+  top: 20%;
   left: 20px;
   opacity: 1;
   .textContainer {
-      background-color: rgba(0, 0, 0, 0.171);
-      display: flex;
+    background-color: rgba(0, 0, 0, 0.171);
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     color: white;
     float: left;
-
-    h2{
-        font-weight: bold;
+    h2 {
+      font-weight: bold;
     }
-    p{
-        font-size: 18px;
+    p {
+      font-size: 18px;
     }
   }
 }
+.buttonTxt {
+  padding: 10px;
+  border: none;
+  background-color: red;
+}
+.buttonTxt:hover {
+  background-color: rgba(95, 71, 71, 0.981);
+}
 
-.buttonTxt{
+@media only screen and (max-width: 770px) {
+  .GrowBusinessContainer {
+    img {
+      height: 250px;
+    }
+  }
+  .content {
+    top: 15%;
+    left: 10px;
+    .textContainer {
+      h2 {
+        font-size: 1.5rem;
+        font-weight: bold;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
+  .buttonTxt {
+    padding: 20px;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .content {
+    flex-direction: column;
+    justify-content: center;
+    top: 0;
+    left: 35px;
+    width: 80%;
+
+    .textContainer {
+      h2 {
+        font-weight: bold;
+        background-color: rgba(0, 0, 0, 0.357);
+      }
+      p {
+        background-color: rgba(0, 0, 0, 0.261);
+        font-size: 18px;
+      }
+    }
+  }
+  .buttonTxt {
     padding: 10px;
     border: none;
     background-color: red;
+  }
 }
 
-.buttonTxt:hover{
-    background-color: rgba(255, 0, 0, 0.555);
+@media only screen and (max-width: 380px) {
+  .GrowBusinessContainer {
+    img {
+      height: 280px;
+    }
+  }
 
+  .GrowBusinessContainer {
+    margin-left: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 325px) {
+  .content {
+    width: 80%;
+    .textContainer {
+      text-align: center;
+      h2 {
+        font-size: 1.1rem;
+        font-weight: bold;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
+
+  .GrowBusinessContainer {
+    margin-left: 1.5rem;
+  }
 }
