--- a/src/SCSS/HomeScss/HowItWorks.scss
+++ b/src/SCSS/HomeScss/HowItWorks.scss
@@ -4,7 +4,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   transform: skewY(3deg);
-  h2{
+  h2 {
     color: white;
   }
 }
@@ -31,5 +31,28 @@
     justify-content: center;
     align-items: center;
   }
-  
+}
+
+@media only screen and (max-width: 1030px) {
+  .howWorkHeader {
+    font-size: 1.5rem;
+  }
+  .howWorkIntro {
+    font-size: 1.2rem;
+  }
+
+}
+
+
+@media only screen and (max-width: 430px) {
+  .howWorkHeader {
+    font-size: 1.2rem;
+  }
+  .howWorkIntro {
+    font-size: 1rem;
+  }
+  .howItWorkContainer{
+    margin-right: 0;
+    margin-left: 1.5rem ;
+  }
 }
