--- a/src/SCSS/Navbar.scss
+++ b/src/SCSS/Navbar.scss
@@ -1,63 +1,134 @@
-
-
 .navbarContainer {
   width: 100%;
   height: 15%;
   left: 0px;
   top: 0px;
-  
+
   background: #f43d4b;
 }
 
-.inner_nav{
+
+
+
+.inner_nav {
   display: flex;
   flex-direction: row;
-  align-items:center;
+  align-items: center;
   justify-content: space-around;
   height: 100%;
   width: 100%;
-
-}
-
-.icon {
-  background-size: contain;
-  width: 15%;
-  height: 80%;
-  left: 10%;
-  top: 5%;
-  z-index: 12;
-  margin-left: 3rem;
-  background-repeat: no-repeat;
-  background-image: url(../Img/boongg-white-logo.jpg);
-}
-
-.loginBtn1{
-  font-size: 1.2rem;
-  margin-right: 5rem; 
   padding: 10px;
-  border-radius: 15%;
-  /* border: 2px solid; */
-  color: #ffffff;
-}
-.loginBtn:hover{
-  background-color: #3d352cb7;
 }
 
-
-@media only screen and (max-width: 1024px) {
- 
-  .navInput{
-    display: none;
+.iconContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+  
+  .icon {
+    background-size: contain;
+    width: 15%;
+    height: 80%;
+    left: 10%;
+    top: 5%;
+    z-index: 12;
+    
+    background-repeat: no-repeat;
+    background-image: url(../Img/boongg-white-logo.jpg);
   }
 
+.navbarInputContainer {
+  // border: 2px black solid;
+  height: 3rem;
+  .navbarLocation {
+    border-top-left-radius: 10%;
+    border-bottom-left-radius: 10%;
+  }
+  input {
+    border: none;
+    outline: none;
+    padding: 10px;
+    font-size: 16px;
+  }
+  // div{
+  //   border-right: 1px solid rgba(0, 0, 0, 0.741);
+  //   border-left: 1px solid rgba(0, 0, 0, 0.741);
+  // }
+
+  .navbarStarting_date,
+  .navbarEndingDate,
+  .navbarRentBtn {
+    height: 100%;
+    width: 100%;
+  }
+
+  .navbarRentBtn {
+    padding: 10px;
+    background-color: rgb(55, 44, 44);
+    color: white;
+    font-weight: bold;
+    border-top-right-radius: 10%;
+    border-bottom-right-radius: 10%;
+  }
+  .navbarRentBtn:hover {
+    background-color: rgb(220, 127, 127);
+    color: rgb(24, 11, 11);
+  }
+}
+
+.row {
+  margin: 0;
+  padding: 0;
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  .material-icons {
+    height: 100%;
+    width: 100%;
+    font-size: 36dp !important;
+    display: flex !important;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+    border: none;
+  }
+  .material-icons:hover {
+    background-color: rgba(0, 0, 0, 0.501);
+  }
+}
+
+.navbarLoginBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .loginBtn1 {
+    font-size: 1.2rem;
+   
+    z-index: 13;
+    padding: 10px;
+    border-radius: 15%;
+    /* border: 2px solid; */
+    color: #ffffff;
+  }
+  .loginBtn:hover {
+    background-color: #1f1d1bb7;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .navInput {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 768px) {
- 
-  .loginBtn1{
-  padding: 0px;
-  margin-right: 0; 
-  display: block;
+  .loginBtn1 {
+    padding: 0px;
+    margin-right: 0;
+    display: block;
   }
-
 }
