--- a/src/SCSS/Search.scss
+++ b/src/SCSS/Search.scss
@@ -1,25 +1,236 @@
 .searchContainer {
   margin-top: 15vh;
-  height: 85vh;
+  height: 80vh;
+  // overflow: auto;
 }
 
 .topContainer {
+  position: fixed;
+  width: 100vw;
   height: 7vh;
-  border: 1px solid;
+  z-index: 1;
+  border-bottom: 1px solid;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgb(250, 208, 208);
   .topContainerItems {
-    height: 5vh;
-  }
-  .searchCurrency * {
-    height: 100%;
-  }
-  .searchCurrency {
-    height: 5vh;
-    width: 5vh;
+    height: 6vh;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    color: black;
+    border-radius: 4%;
+
+    * {
+      height: 100%;
+      margin: 0;
+      margin-right: 1.4rem;
+      border: none;
+      span {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    button {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    }
+    .searchCurrency {
+      width: 6vh;
+      color: black;
+      border-radius: 50%;
+      background-color: red;
+      color: white;
+      span {
+        margin-left: 3vh;
+      }
+    }
+    .searchCurrency:hover {
+      background-color: rgb(150, 55, 55);
+    }
+
+    .sarchModifyBtn {
+      background-color: red;
+      color: white;
+      padding: 12px;
+      font-size: 18px;
+      font-weight: 400;
+    }
+
+    .sarchModifyBtn:hover {
+      background-color: rgb(211, 202, 202);
+      color: red;
+    }
+    .searchMapView {
+      font-weight: bold;
+      padding: 12px;
+      font-size: 18px;
+
+      padding-left: 6vh;
+    }
+
+    .searchMapView:hover {
+      color: red;
+      background-color: rgb(182, 172, 172);
+    }
+  }
+}
+
+.bottomContainer {
+  padding: 10px;
+  padding-top: 10vh;
+  .searchGrid {
+    //   overflow: scroll;
+  }
+
+  .card {
+    z-index: 0;
+    height: auto;
+    padding: 10px;
+    width: 29%;
+    box-shadow: 0px 0px 6px 0px;
+    position: relative;
+
+    .searchCardContant {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .searchCardTitle {
+      display: flex;
+      width: 100%;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 1.5rem;
+      span {
+        border-radius: 30%;
+        border-bottom: 2px solid red;
+      }
+    }
+    .searchCardSelectLocation {
+      height: 2.5rem;
+      padding: 5px;
+      border: 2px solid rgb(199, 8, 8);
+      margin-bottom: 1.5rem;
+    }
+
+    .searchCardBookNow {
+      display: block;
+      margin-bottom: 4rem;
+      padding: 8px;
+      padding-left: 30px;
+      padding-right: 30px;
+      color: white;
+      background-color: rgb(199, 8, 8);
+      border: none;
+    }
+
+    .searchCardBookNow:hover {
+      background-color: rgb(163, 23, 23);
+    }
+
+    .seachCardContactBtn {
+      position: absolute;
+      bottom: 1rem;
+      right: 1rem;
+      height: 3rem;
+      width: 3rem;
+      border-radius: 50%;
+      background-color: white;
+      color: red;
+      padding: 10px;
+      float: right;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid rgba(24, 20, 20, 0.46);
+    }
+  }
+}
+
+.leftNavHead {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.remainingItemModalBtn {
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  position: relative;
+  .remainingItemModalBtnArrow {
+    width: min-content;
+    background-color: none;
+  }
+  
+}
+
+
+.modalDataContainer,.locationDataContainer{
+  position: absolute;
+  top: 1.5rem;
+  left: 1rem;
+  border: 1px solid;
+  padding: 20px;
+  background-color: white;
+  width: 50vw;
+  height:40vh;
+  z-index: 20;
+  box-shadow: 0px 0px 10px 0px;
+  overflow: auto;
+
+  .BikeListContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;  
+    flex-wrap: wrap;
+  }
+}
+
+.modalDataSearchbar,.locationDataSearchbar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  input{
+    padding-left: 5px;
+  }
+
+
+
+  .modalDataSearchFilter{
+    width: 40vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-weight: bold;
+    .filterInner{
+      opacity: 0.5;
+
+    }
+    .filterInner:hover{
+      opacity: 1;
+    }
+  }
+}
+
+
+.BikeListContainer{
+
+  .form-check-input {
+    // background-color: red;
+    border-color: red;
+    border: 2px solid red;
+  }
+  .form-check-input:checked {
+    background-color: red;
+   
   }
 }
